--- a/app/templates/emel-services.html
+++ b/app/templates/emel-services.html
@@ -10,20 +10,18 @@
 
 
 <body class="min-h-screen flex flex-col justify-center items-center bg-gallery">
-    <div class="absolute inset-0 bg-black/40 backdrop-blur-sm z-0"></div>
+    <div class="fixed inset-0 bg-black/40 backdrop-blur-sm z-0"></div>
 <section class="w-full flex-1 flex justify-center items-center">
 
-            <div class="w-full h-auto flex flex-col md:flex-row justify-center items-start p-6 gap-6 z-10">
+            <div class="w-full h-auto flex flex-col md:flex-row justify-center items-start p-4 gap-2 z-10">
 
             <!-- Services -->
-            <div class="flex flex-col gap-2 bg-black p-10 rounded-xl  border-2 border-white">
-                <h2 class="text-white text-lg ml-2 font-normal">Select a service for your appointment:</h2>
-
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 justify-items-center"></div>
+            <div class="flex flex-col gap-2 bg-black p-7 sm:p-7 md:p-10 lg:p-10 rounded-xl border-2 border-white w-[330px] sm:w-[330px] md:w-auto lg:w-auto">
+                <h2 class="text-white text-xs sm:text-xs md:text-normal lg:text-base ml-2 font-montserrat">Select a service for your appointment:</h2>
 
               <!-- Beard Service -->
                <a href="{{ url_for('routes.select_service', barber='Emel Calomos', service_name='beard') }}">
-              <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
+              <div class="group relative w-[275px] h-[85px] sm:w-[275px] md:w-[350px] lg:-[350px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
                 <img src="{{ url_for('static', filename ='icons/beard.png') }}" 
                     alt="Beard Service" 
                     class="w-[45px] h-[45px] object-contain ml-3 transition-all duration-700 ease-in-out group-hover:-translate-x-10 group-hover:opacity-0">
@@ -44,7 +42,7 @@
 
               <!-- Mens' Haircut -->
                <a href="{{ url_for('routes.select_service', barber='Emel Calomos', service_name='haircut') }}">
-              <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
+              <div class="group relative w-[275px] h-[85px] sm:w-[275px] md:w-[350px] lg:-[350px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
                 <img src="{{ url_for('static', filename ='icons/erazor.png') }}" 
                     alt="Beard Service" 
                     class="w-[45px] h-[45px] object-contain ml-3 transition-all duration-700 ease-in-out group-hover:-translate-x-10 group-hover:opacity-0">
@@ -63,7 +61,7 @@
 
               <!-- Home Service -->
                <a href="{{ url_for('routes.select_service', barber='Emel Calomos', service_name='home') }}">
-              <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
+              <div class="group relative w-[275px] h-[85px] sm:w-[275px] md:w-[350px] lg:-[350px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
                 <img src="{{ url_for('static', filename ='icons/home.png') }}" 
                     alt="Beard Service" 
                     class="w-[45px] h-[45px] object-contain ml-3 transition-all duration-700 ease-in-out group-hover:-translate-x-10 group-hover:opacity-0">
@@ -82,7 +80,7 @@
 
               <!-- Full Service -->
                <a href="{{ url_for('routes.select_service', barber='Emel Calomos', service_name='full') }}">
-              <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
+              <div class="group relative w-[275px] h-[85px] sm:w-[275px] md:w-[350px] lg:-[350px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
                 <img src="{{ url_for('static', filename ='icons/chair.png') }}" 
                     alt="Beard Service" 
                     class="w-[45px] h-[45px] object-contain ml-3 transition-all duration-700 ease-in-out group-hover:-translate-x-10 group-hover:opacity-0">
@@ -101,7 +99,7 @@
 
               <!-- Full Shave -->
                <a href="{{ url_for('routes.select_service', barber='Emel Calomos', service_name='shave') }}">
-              <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
+              <div class="group relative w-[275px] h-[85px] sm:w-[275px] md:w-[350px] lg:-[350px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
                 <img src="{{ url_for('static', filename ='icons/razor.png') }}" 
                     alt="Beard Service" 
                     class="w-[45px] h-[45px] object-contain ml-3 transition-all duration-700 ease-in-out group-hover:-translate-x-10 group-hover:opacity-0">
