--- a/app/static/css/calendar.css
+++ b/app/static/css/calendar.css
@@ -1,5 +1,4 @@
 .day {
-    width: 100%;          
     aspect-ratio: 1 / 1; 
     padding: 10px;
     border-radius: 4px;
@@ -7,8 +6,29 @@
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+    font-size: 16px;
+    border-color: rgb(185, 185, 185);
+    border-width: 1px;
+    background-color: white;
 }
-
+@media (min-width: 300px) {
+  .day {
+    width: 40px;
+    height: 40px;
+  }
+}
+@media (min-width: 768px) {
+  .day {
+    width: 65px;
+    height: 65px;
+  }
+}
+@media (min-width: 1024px) {
+  .day {
+    width: 65px;
+    height: 65px;
+  }
+}
 .day:hover {
     border-width: 2px;
     border-color: black;
@@ -16,14 +36,14 @@
     color: rgb(0, 0, 0);
     cursor: pointer;
 }
-
 .selected {
     border-width: 2px;
-    border-color: rgb(36, 36, 36);
+    border-color: rgb(0, 0, 0);
     background-color: #ffffff; 
     color: rgb(0, 0, 0);
+    border-radius: 4px;
+    
 }
-
 .time {
     background-color: #ffffff;
     color: rgb(0, 0, 0);
@@ -31,7 +51,10 @@
 
 .today {
     background-color: #000000;
-    color: rgb(255, 255, 255); 
+    color: rgb(255, 248, 248); 
+    border-color: white;
+    border-width: 2px;
+    border-radius: 4px;
 }
 
 .date {
