--- a/app/templates/admin/boboy-dashboard_home.html
+++ b/app/templates/admin/boboy-dashboard_home.html
@@ -223,7 +223,7 @@
                         </div>
                     </div>
                     <button type="submit" class="w-full bg-black text-white py-2 rounded-lg border-2 border-red-600 hover:border-red-400 transition font-montserrat">Remove Appointment</button>
-                </form>
+                </form>s
             </div>
             <!-- Confirmation Modal -->
             <div id="confirmRemoveModal" class="modal">
