--- a/app/templates/emel-calendar.html
+++ b/app/templates/emel-calendar.html
@@ -10,31 +10,39 @@
 </head>
 
 <body class="min-h-screen flex flex-col justify-center items-center bg-gallery">
-    <div class="absolute inset-0 bg-black/40 backdrop-blur-sm z-0"></div>
+    <div class="fixed inset-0 bg-black/40 backdrop-blur-sm z-0"></div>
 <section class="w-full flex-1 flex justify-center items-center">
 <div class="w-full h-auto flex flex-col md:flex-row justify-center items-start p-6 gap-6 z-10">
 
-    <div class="bg-white p-4 sm:p-6 rounded-lg shadow-lg w-[90%] max-w-[500px]">
-    <div class="flex justify-between items-center mb-4">
-        <button id="prevMonth" class="px-2 sm:px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">&lt;</button>
-        <h2 id="monthYear" class="text-lg font-semibold"></h2>
-        <button id="nextMonth" class="px-2 sm:px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">&gt;</button>
+    <div class="bg-black p-4 sm:p-6 rounded-lg shadow-lg w-auto border-2 border-white">
+        <div class="flex justify-between items-center mb-4">
+            <button id="prevMonth" class="px-2 sm:px-3 py-1 bg-white text-black rounded hover:bg-gray-300">&lt;</button>
+            <h2 id="monthYear" class="text-lg text-white font-semibold"></h2>
+            <button id="nextMonth" class="px-2 sm:px-3 py-1 bg-white text-black rounded hover:bg-gray-300">&gt;</button>
+        </div>
+    <div class="">
+        <div class="grid grid-cols-7 text-center text-[14px] md:text-[16] lg:text-[16px] font-lato font-bold h-10">
+            <div class="flex items-center justify-center text-white bg-gray border border-white ">Sun</div>
+            <div class="flex items-center justify-center text-white bg-gray border border-white ">Mon</div>
+            <div class="flex items-center justify-center text-white bg-gray border border-white ">Tue</div>
+            <div class="flex items-center justify-center text-white bg-gray border border-white ">Wed</div>
+            <div class="flex items-center justify-center text-white bg-gray border border-white ">Thu</div>
+            <div class="flex items-center justify-center text-white bg-gray border border-white ">Fri</div>
+            <div class="flex items-center justify-center text-white bg-gray border border-white ">Sat</div>
+        </div>
+        <div id="calendarDays" class="grid grid-cols-7 bg-gray border-white border-2 "></div>
     </div>
-    <div class="grid grid-cols-7 gap-1 text-center font-medium text-gray-700">
-        <div>Sun</div>
-        <div>Mon</div>
-        <div>Tue</div>
-        <div>Wed</div>
-        <div>Thu</div>
-        <div>Fri</div>
-        <div>Sat</div>
     </div>
-    <div id="calendarDays" class="grid grid-cols-7 gap-2 mt-2"></div>
-</div>
 
 <div class="bg-black text-white md:w-[450px] min-h-[400px] self-start p-6 rounded-xl shadow-md border-2 border-white">
-    <h2 class="text-sm font-normal mb-4">Select appointment time:</h2>
-    <h3 id="selectedDate" class="text-xl font-semibold mb-4"></h3>
+     <div class="flex flex-row items-center justify-between">
+        <div>
+        <h2 class="text-sm font-normal mb-4">Select appointment time:</h2>
+        <h3 id="selectedDate" class="text-xl font-semibold mb-4"></h3>
+        </div>
+        <img src="{{ url_for('static', filename='images/Slick.jpg')}}" 
+                            class="w-[70px] h-[50px] md:w-[70px] md:h-[50px] lg:w-[70px] rounded-[6px] lg:h-[50px] mb-4">
+    </div>
     
     <!-- Time Slot Buttons -->
     <div class="grid grid-cols-2 gap-3">
@@ -101,7 +109,7 @@
             <input type="hidden" name="time" id="hiddenTime" value="">
         <button id="proceedBtn-emel"
             type="submit"
-            class="hidden mt-4 w-full bg-blue-500 text-white py-2 px-4 rounded text-center">
+            class="hidden mt-4 w-full bg-black text-white border border-blue-600 hover:border-blue-400 py-2 px-4 rounded text-center">
             Confirm Appointment
         </button>
         </form>
@@ -117,7 +125,7 @@
 
 
      <!-- Appointment Section (Right) -->
-    <div class="bg-black text-white md:w-auto md:h-auto p-6 rounded-xl shadow-md border-2 border-white">
+    <div class="bg-black text-white md:w-auto md:h-auto p-5 rounded-xl shadow-md border-2 border-white">
         <h2 class="text-lg font-normal mb-4">Schedule Information:</h2>
         
 
@@ -138,7 +146,7 @@
                 </div>
 
                                       <!-- Service Selected -->
-              <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden mt-2 mb-2">
+              <div class="group relative w-[280px] sm:w-[280px] md:w-[350px] lg:w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden mt-2 mb-2">
                 <img src="{{ url_for('static', filename=service.icon) }}"
                     alt="{{ service.name }}"
                     class="w-[45px] h-[45px] object-contain ml-3 ">
@@ -149,8 +157,8 @@
                 </div>
               </div>
 
-              <h3 id="selectedDateAppointment" class="text-3xl text-center font-faustina font-semibold"> Wednesday <br> August 14, 2025</h3>
-              <h4 id="timeSlot" class="text-4xl text-center font-faustina font-semibold mb-4">-Select Time-</h4>
+              <h3 id="selectedDateAppointment" class="text-2xl text-center font-faustina font-semibold"> Wednesday <br> August 14, 2025</h3>
+              <h4 id="timeSlot" class="text-3xl text-center font-faustina font-semibold mb-4">-Select Time-</h4>
     </div>
 </div>
 
