few adjustments on Home Page

--- a/app/templates/sections/artist.html
+++ b/app/templates/sections/artist.html
@@ -1,19 +1,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Lato:wght@300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-    <div class="bg-white w-full h-[100px] flex flex-col items-center justify-center border-t-2 border-b-2 border-black relative z-10">
-        <h1 class="font-playfair font-semibold text-[35px] text-black">ARTIST</h1>
-        <p class="font-lato font-light text-[18px] text-gray-600 -mt-2">Creator Behind Arts</p>
+    <div class="bg-black w-full h-[100px] flex flex-col items-center justify-center border-t-2 border-b-2 border-white relative z-10">
+        <h1 class="font-playfair font-semibold text-[35px] text-white">ARTIST</h1>
+        <p class="font-lato font-light text-[18px] text-gray-300 -mt-2">Creator Behind Arts</p>
     </div>
 
     <div class="w-full bg-gallery h-[800px]">
-    <div class="fixed inset-0 bg-black/40 z-0"></div>
         <div class="max-w-[1200px] mx-auto flex justify-center gap-30 z-10">
 
              <!-- EMEL CALOMOS -->
-            <div class="relative h-[450px] w-[410px] bg-black rounded-[20px] border-[6px] border-white
+            <div class="relative h-[450px] w-[390px] bg-black rounded-[15px] border-[3px] border-white
                 hover:scale-[1.01] hover:shadow-[0_0_30px_rgba(255,255,255,0.7)]
-                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden mt-40">
+                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden mt-40 z-10">
 
                 <!-- Image (blurs on hover) -->
                 <img
@@ -42,8 +41,8 @@
                 </div>
 
                 <!-- Name label -->
-                <div class="absolute bottom-[20px] left-[20px] text-white text-2xl font-semibold
-                    transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
+                <div class="absolute bottom-[20px] left-[20px] text-white text-3xl font-semibold
+                    transition-all duration-[2500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[150%] group-hover:opacity-0"
                     style="font-family:'Play Fair', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
                     Emel Calomos
@@ -54,14 +53,14 @@
                     alt="Gallery Image"
                     class="absolute top-[10px] left-[10px] w-15 h-15 rounded-[4px] opacity-85
                     transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
-                    group-hover:-translate-x-[150%] group-hover:opacity-0"
+                    group-hover:-translate-x-[250%] group-hover:opacity-0"
                     />
             </div>
 
                 <!-- ANGELO PABALLA -->
-            <div class="relative h-[450px] w-[410px] bg-black rounded-[20px] border-[6px] border-white
+            <div class="relative h-[450px] w-[390px] bg-black rounded-[15px] border-[3px] border-white
                 hover:scale-[1.01] hover:shadow-[0_0_30px_rgba(255,255,255,0.7)]
-                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden mt-40">
+                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden mt-40 z-10">
 
                 <!-- Image (blurs on hover) -->
                 <img
@@ -90,8 +89,8 @@
                 </div>
 
                 <!-- Name label -->
-                <div class="absolute bottom-[20px] left-[20px] text-white text-2xl font-semibold
-                    transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
+                <div class="absolute bottom-[20px] left-[20px] text-white text-3xl font-semibold
+                    transition-all duration-[2500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[150%] group-hover:opacity-0"
                     style="font-family:'Play Fair', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
                     Angelo Paballa
