--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,7 +7,7 @@
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 </head>
 <body>
-    <header class="navbar absolute top-0 left-0 w-full z-50">
+    <header class="navbar fixed top-0 left-0 w-full z-50">
         {% include '/sections/navbar.html' %}
     </header>
     <main class="pt-[75px]"> 
@@ -23,17 +23,15 @@
     <section class="services">
         {% include '/sections/services.html' %}
     </section>
-    <section class="location">
+    <section class="location relative z-10">
         {% include '/sections/location.html' %}
     </section>
-    <section class="feedback">
+    <section class="feedback relative z-10">
         {% include '/sections/feedback.html' %}
     </section>
     <section class="footer">
         {% include '/sections/footer.html' %}
     </section>
-
- 
     </main>
 </body>
 </html>
