--- a/app/templates/sections/banner.html
+++ b/app/templates/sections/banner.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div class="relative h-screen z-10">
+    <div class="fixed inset-0 bg-black/40 backdrop-blur-sm z-0"></div>
     <!-- Background Image and Gradient Layer -->
     <div class="absolute inset-0 bg-cover bg-center" style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0.95), rgba(38, 38, 38, 0.8)), url('/static/images/banner.jpeg');"></div>
     
