--- a/app/templates/sections/feedback.html
+++ b/app/templates/sections/feedback.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <div class="bg-white w-full h-[100px] flex flex-col items-center justify-center border-t-2 border-b-2 border-black">
-        <h1 class="font-playfair font-semibold text-[35px] text-black">We Value Your Feedback</h1>
+    <div class="bg-black w-full h-[100px] flex flex-col items-center justify-center border-t-2 border-b-2 border-white relative z-10">
+        <h1 class="font-playfair font-semibold text-[35px] text-white">We Value Your Feedback</h1>
     </div>
-    <div class="w-full h-auto flex flex-col lg:flex-row justify-center p-6 gap-4 bg-gray-800">
+    <div class="w-full h-auto flex flex-col lg:flex-row justify-center p-6 gap-4 bg-black">
 
         {# Ratings & Reviews column - column 1 of 3 #}
     {% set ratings_counts = ratings_counts | default({5: 8, 4: 1, 3: 0, 2: 0, 1: 1}) %}
