--- a/app/templates/sections/gallery.html
+++ b/app/templates/sections/gallery.html
@@ -1,12 +1,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@600&family=Faustina:wght@400;700&family=Lato:wght@300&display=swap" rel="stylesheet">
 <body class="">
-<div class="bg-white w-full h-[100px] flex flex-col items-center justify-center border-t-2 border-b-2 border-black relative z-10">
-  <h1 class="font-playfair font-semibold text-[35px] text-black">GALLERY</h1>
-  <p class="font-lato font-light text-[18px] text-gray-600 -mt-2">Meticulously Crafted Artworks</p>
+<div class="bg-black w-full h-[100px] flex flex-col items-center justify-center border-t-2 border-b-2 border-white relative z-10">
+  <h1 class="font-playfair font-semibold text-[35px] text-white">GALLERY</h1>
+  <p class="font-lato font-light text-[18px] text-gray-300 -mt-2">Meticulously Crafted Artworks</p>
 </div>
 
 <!-- Infinite Scroll Gallery -->
-<div class="relative overflow-hidden bg-gallery py-10">
+<div class="relative h-screen  overflow-hidden bg-gallery py-10">
     <div class="fixed inset-0 bg-black/1 z-0"></div>
   <div id="gallery-track-left" class="flex gap-4 mb-4 animate-scroll-left relative z-10">
     {% for img, title, subtitle in [
@@ -21,7 +21,7 @@
       <div class="relative group flex-shrink-0 
                   h-[400px] w-[300px] overflow-hidden 
                   transition-transform duration-500 ease-in-out 
-                  hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[6px] rounded-[10px] border-white">
+                  hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
         <!-- Image with contained blur on hover -->
         <img src="{{ url_for('static', filename=img) }}"
@@ -50,7 +50,7 @@
       <div class="relative group flex-shrink-0 
                   h-[400px] w-[300px] overflow-hidden 
                   transition-transform duration-500 ease-in-out 
-                  hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[6px] rounded-[10px] border-white">
+                  hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
         <!-- Image with contained blur on hover -->
         <img src="{{ url_for('static', filename=img) }}"
@@ -81,7 +81,7 @@
       <div class="relative group flex-shrink-0 
                   h-[400px] w-[300px] overflow-hidden 
                   transition-transform duration-500 ease-in-out 
-                  hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[6px] rounded-[10px] border-white">
+                  hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
         <!-- Image with contained blur on hover -->
         <img src="{{ url_for('static', filename=img) }}"
@@ -110,7 +110,7 @@
       <div class="relative group flex-shrink-0 
                   h-[400px] w-[300px] overflow-hidden 
                   transition-transform duration-500 ease-in-out 
-                  hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[6px] rounded-[10px] border-white">
+                  hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
         <!-- Image with contained blur on hover -->
         <img src="{{ url_for('static', filename=img) }}"
