--- a/app/templates/emel-calendar.html
+++ b/app/templates/emel-calendar.html
@@ -165,6 +165,7 @@
            
 
 </section>
+<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <script src="{{ url_for('static', filename='js/Ecalendar.js') }}"></script>
 
 
