--- a/app/templates/sections/navbar.html
+++ b/app/templates/sections/navbar.html
@@ -1,9 +1,9 @@
-<div class="h-[75px] bg-black flex justify-between items-center">
-    <div class="ml-[40px]">
+<div class="h-[60px] bg-black flex justify-between items-center sm:h-[60px] md:h-[75px] lg:h-[75px]">
+    <div class="ml-[20px] sm:ml-[20px] md:ml-[40px] lg:ml-[40px]">
       <a href="{{ url_for('admin.ADMINLOGIN') }}">
         <img src="{{ url_for('static', filename='images/SG-LOGO.jpg') }}" 
              alt="Logo" 
-             class="w-[75px] h-[75px] object-cover" />
+             class="w-[50px] h-[50px] object-cover sm:h-[50px] sm:w-[50px] md:w-[75px] md:h-[75px] lg:h-[75px] lg:w-[75px]" />
         </a>
     </div>
 
