--- a/app/templates/sections/services.html
+++ b/app/templates/sections/services.html
@@ -1,8 +1,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Lato:wght@300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-<div class="bg-white w-full h-[100px] flex flex-col items-center justify-center border-t-2 border-b-2 border-black relative z-10">
-        <h1 class="font-playfair font-semibold text-[35px] text-black">SERVICES</h1>
+<div class="bg-black w-full h-[100px] flex flex-col items-center justify-center border-t-2 border-b-2 border-white relative z-10">
+        <h1 class="font-playfair font-semibold text-[35px] text-white">SERVICES</h1>
 </div>
 
 <div class="w-full bg-gallery h-[800px]">
